--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "format": "prettier --write .",
-        "lint:js": "eslint \"./**/*.js/"
+        "lint:js": "eslint \"./**/*.js/",
+        "lint:scss": "stylelint \"./**/*.scss/"
     },
     "repository": {
         "type": "git",
@@ -22,6 +23,10 @@
         "eslint": "^8.15.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.0.0",
-        "prettier": "^2.6.2"
-    }
+        "prettier": "^2.6.2",
+        "stylelint": "^14.8.2",
+        "stylelint-config-prettier-scss": "0.0.1",
+        "stylelint-config-standard-scss": "^3.0.0"
+    },
+    "dependencies": {}
 }
