--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -11,3 +11,6 @@ rules:
     "prettier/prettier": "error"
     camelcase: ["error"]
     eqeqeq: ["error"]
+
+parserOptions:
+    sourceType: 'module'    
