--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "prepare": "husky install",
         "lint": "npm run lint:js && npm run lint:scss",
         "build": "SET NODE_ENV=production&webpack",
-        "start": "SET NODE_ENV=development&webpack-dev-server --open"
+        "start": "SET NODE_ENV=development&webpack-dev-server --open",
+        "lint:ts": "tsc --noEmit"
     },
     "repository": {
         "type": "git",
@@ -40,6 +41,8 @@
         "stylelint": "^14.8.2",
         "stylelint-config-prettier-scss": "0.0.1",
         "stylelint-config-standard-scss": "^3.0.0",
+        "ts-loader": "^9.3.0",
+        "typescript": "^4.7.3",
         "webpack": "^5.72.1",
         "webpack-cli": "^4.9.2",
         "webpack-dev-server": "^4.9.1"
